# research

./: .gitignore  CLAUDE.md  journal.md  meeting-notes.md  memory.md
code/: .gitignore  pyproject.toml
code/dyn2dbp/: __init__.py
code/dyn2dbp/core/: bin.py  item.py  simulator.py
code/dyn2dbp/heuristics/: __init__.py  base.py  bfs.py  blf.py  ffs.py  nfs.py  shelf.py
code/dyn2dbp/metrics/: __init__.py  discard.py  fragmentation.py  pe.py  types.py
code/dyn2dbp/viz/: grid_view.py  snapshot.py
code/dyn2dbp/workloads/: base.py  presets.py  synthetic.py
code/scripts/: demo_blf.py  demo_grid_view.py  demo_timeseries.py  demo_workload.py  mode_stability_sweep.py  seed_sweep.py  signature_analysis.py
code/tests/: test_bfs.py  test_bin.py  test_blf.py  test_discard.py  test_ffs.py  test_fragmentation.py  test_grid_view.py  test_nfs.py  test_pe.py  test_simulator.py  test_workloads.py
context/: advisor.md  department.md  research-interests.md  topic-fit-framework.md
for my self, don't revise/: journal.md  meeting-notes.md
memory/: candidate-topics.md  experiments.md  ideas.md  inbox.md  literature-map.md  progress.md  research-decisions.md
